--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,11 @@
+argon2-cffi==20.1.0
+attrs==19.3.0
 backcall==0.2.0
 beautifulsoup4==4.9.1
+bleach==3.1.5
 Brotli==1.0.7
 certifi==2020.6.20
+cffi==1.14.1
 chardet==3.0.4
 click==7.1.2
 cycler==0.10.0
@@ -11,50 +15,74 @@ dash-html-components==1.0.3
 dash-renderer==1.6.0
 dash-table==4.9.0
 decorator==4.4.2
+defusedxml==0.6.0
+entrypoints==0.3
 Flask==1.1.2
 Flask-Compress==1.5.0
 future==0.18.2
 idna==2.10
+importlib-metadata==1.7.0
 ipykernel==5.3.4
 ipython==7.17.0
 ipython-genutils==0.2.0
+ipywidgets==7.5.1
 itsdangerous==1.1.0
 jedi==0.17.2
 Jinja2==2.11.2
+jsonschema==3.2.0
+jupyter==1.0.0
 jupyter-client==6.1.6
+jupyter-console==6.1.0
 jupyter-core==4.6.3
 kiwisolver==1.2.0
 lxml==4.5.2
 MarkupSafe==1.1.1
 matplotlib==3.3.0
+mistune==0.8.4
+nbconvert==5.6.1
+nbformat==5.0.7
+notebook==6.1.1
 numpy==1.19.1
 oauthlib==3.1.0
+packaging==20.4
 pandas==1.1.0
+pandocfilters==1.4.2
 parso==0.7.1
 pexpect==4.8.0
 pickleshare==0.7.5
 Pillow==7.2.0
 plotly==4.9.0
+prometheus-client==0.8.0
 prompt-toolkit==3.0.5
 ptyprocess==0.6.0
+pycparser==2.20
 Pygments==2.6.1
 pymongo==3.11.0
 pyparsing==2.4.7
+pyrsistent==0.16.0
 PySocks==1.7.1
 python-dateutil==2.8.1
 pytz==2020.1
 pyzmq==19.0.2
+qtconsole==4.7.5
+QtPy==1.9.0
 requests==2.24.0
 requests-oauthlib==1.3.0
 retrying==1.3.3
 scipy==1.5.2
 seaborn==0.10.1
 selenium==3.141.0
+Send2Trash==1.5.0
 six==1.15.0
 soupsieve==2.0.1
+terminado==0.8.3
+testpath==0.4.4
 tornado==6.0.4
 traitlets==4.3.3
 tweepy==3.9.0
 urllib3==1.25.10
 wcwidth==0.2.5
+webencodings==0.5.1
 Werkzeug==1.0.1
+widgetsnbextension==3.5.1
+zipp==3.1.0
