--- a/requirements.txt
+++ b/requirements.txt
@@ -66,20 +66,22 @@ pytz==2020.1
 pyzmq==19.0.2
 qtconsole==4.7.5
 QtPy==1.9.0
-requests==2.24.0
+requests==2.5.0
 requests-oauthlib==1.3.0
 retrying==1.3.3
 scipy==1.5.2
 seaborn==0.10.1
 selenium==3.141.0
 Send2Trash==1.5.0
-six==1.15.0
+six==1.8.0
 soupsieve==2.0.1
+swapi==0.1.3
 terminado==0.8.3
 testpath==0.4.4
 tornado==6.0.4
 traitlets==4.3.3
 tweepy==3.9.0
+ujson==1.33
 urllib3==1.25.10
 wcwidth==0.2.5
 webencodings==0.5.1
