--- a/R/www/.gitignore
+++ b/R/www/.gitignore
@@ -39,3 +39,17 @@ pasies07.png
 readmtcars.png
 readmtcars0.png
 resumen.png
+unnamed-chunk-14-1.png
+unnamed-chunk-16-1.png
+unnamed-chunk-19-1.png
+paiscbind1.png
+paisesNA21.png
+plot1-1.png
+plot2-1.png
+plot3-1.png
+plot4-1.png
+plot5-1.png
+plot6-1.png
+plot7-1.png
+plot8-1.png
+plot9-1.png
