--- a/Python/requirementsColab.txt
+++ b/Python/requirementsColab.txt
@@ -115,6 +115,7 @@ requests==2.23.0
 requests-oauthlib==1.3.0
 retrying==1.3.3
 rsa==4.7.1
+scikit-image==0.19.1
 scipy==1.4.1
 seaborn==0.11.0
 selenium==3.141.0
