--- a/Python/requirementsColab.txt
+++ b/Python/requirementsColab.txt
@@ -1,7 +1,7 @@
-pandas==1.1.5
+pandas==1.3
 matplotlib==3.2.2
-numpy==1.19.5
-ipython==5.5.0
+numpy==1.21
+ipython==7.9.0
 seaborn==0.11.2
 beautifulsoup4==4.6.3
 eurostat==0.2.1
@@ -11,15 +11,15 @@ oauth2client==4.1.3
 pymongo==3.11.0
 tweepy==3.6.0
 facebook-business==9.0.3
-lxml==4.2.6
+lxml
 bs4==0.0.1
 selenium==3.141.0
 httplib2==0.19.0
 hootsweet==0.7.1
-ipykernel==4.10.1
+ipykernel==5.3.4
 jupyter==1.0.0
 jupyter-nbextensions-configurator==0.4.1
 jupytext==1.6.0
 nbconvert==5.6.1
-folium==0.2.1
+folium==0.9.1
 imgaug==0.2.5
