--- a/Python/requirementsColab.txt
+++ b/Python/requirementsColab.txt
@@ -1,5 +1,5 @@
-seaborn==0.11.2
-beautifulsoup4==4.6.3
+seaborn
+beautifulsoup4==4.11.1
 eurostat==0.2.1
 world-bank-data==0.1.3
 apiclient==1.0.4
@@ -11,4 +11,5 @@ lxml
 bs4==0.0.1
 selenium==3.141.0
 httplib2==0.19.0
-hootsweet==0.7.1
+pandas==1.5.3
+pytz==2019.3
