--- a/Python/requirementsColab.txt
+++ b/Python/requirementsColab.txt
@@ -17,6 +17,7 @@ CherryPy==18.6.0
 click==7.1.2
 colorama==0.4.3
 curlify==2.2.1
+cssselect
 cycler==0.10.0
 dash==1.17.0
 dash-core-components==1.13.0
@@ -74,11 +75,11 @@ multidict==5.1.0
 nbconvert==5.6.1
 nbformat==5.0.8
 notebook==5.3.1
-numpy==1.19.2
+numpy
 oauth2client==4.1.3
 oauthlib==3.1.0
 packaging==20.4
-pandas==1.1.3
+pandas
 pandaSDMX==0.9
 pandocfilters==1.4.2
 parso==0.7.1
@@ -105,15 +106,14 @@ PySocks==1.7.1
 pytest==6.1.2
 python-dateutil==2.8.1
 pytz==2019.3
-PyYAML==3.13
-pyzmq==19.0.2
+PyYAML
 qtconsole==4.7.7
 QtPy==1.9.0
 requests==2.23.0
 requests-oauthlib==1.3.0
 retrying==1.3.3
 rsa==4.7.1
-scipy==1.4.1
+scipy
 seaborn==0.11.0
 selenium==3.141.0
 Send2Trash==1.5.0
