--- a/Python/requirementsColab.txt
+++ b/Python/requirementsColab.txt
@@ -10,7 +10,6 @@ bleach==3.2.1
 Brotli==1.0.9
 cachetools==4.1.1
 certifi==2020.6.20
-cffi==1.14.3
 chardet==3.0.4
 cheroot==8.5.2
 CherryPy==18.6.0
@@ -65,7 +64,7 @@ jupyter-latex-envs==1.4.6
 jupyter-nbextensions-configurator==0.4.1
 jupytext==1.6.0
 kiwisolver==1.2.0
-lxml==4.2.6
+lxml
 markdown-it-py==0.5.6
 MarkupSafe==1.1.1
 matplotlib==3.2.2
