--- a/Python/requirementsColab.txt
+++ b/Python/requirementsColab.txt
@@ -3,17 +3,15 @@ apiclient==1.0.4
 argon2-cffi==20.1.0
 async-timeout==3.0.1
 atomicwrites==1.4.0
-attrs==20.2.0
 backcall==0.2.0
 beautifulsoup4==4.6.3
 bleach==3.2.1
 Brotli==1.0.9
-cachetools==4.1.1
 certifi==2020.6.20
 chardet==3.0.4
 cheroot==8.5.2
 CherryPy==18.6.0
-click==7.1.2
+click
 colorama==0.4.3
 curlify==2.2.1
 cssselect
@@ -37,54 +35,40 @@ hootsweet==0.7.1
 httplib2==0.19.0
 idna==2.10
 idna-ssl==1.1.0
-importlib-metadata==2.0.0
-importlib-resources==5.1.0
 iniconfig==1.1.1
-ipykernel==4.10.1
-ipython==5.5.0
-ipython-genutils==0.2.0
-ipywidgets==7.5.1
+ipykernel
+ipython
+ipython-genutils
+ipywidgets
 itsdangerous==1.1.0
 jaraco.classes==3.2.1
 jaraco.collections==3.2.0
 jaraco.functools==3.2.1
 jaraco.text==3.5.0
 jedi==0.17.2
-Jinja2==2.11.2
+Jinja2
 jsonpath-rw==1.4.0
-jsonschema==2.6.0
-jupyter==1.0.0
-jupyter-client==6.1.5
-jupyter-console==5.2.0
-jupyter-contrib-core==0.3.3
-jupyter-contrib-nbextensions==0.5.1
-jupyter-core==4.6.3
-jupyter-highlight-selected-word==0.2.0
-jupyter-latex-envs==1.4.6
-jupyter-nbextensions-configurator==0.4.1
+jsonschema
+jupyter
 jupytext==1.6.0
 kiwisolver==1.2.0
 lxml
-markdown-it-py==0.5.6
 MarkupSafe==1.1.1
-matplotlib==3.2.2
+matplotlib
 mistune==0.8.4
 more-itertools==8.7.0
 multidict==5.1.0
-nbconvert==5.6.1
-nbformat==5.0.8
-notebook==5.3.1
+nbconvert
+nbformat
 numpy
 oauth2client==4.1.3
 oauthlib==3.1.0
-packaging==20.4
-pandas
+pandas>=2.2.0
 pandaSDMX==0.9
 pandocfilters==1.4.2
 parso==0.7.1
 pexpect==4.8.0
 pickleshare==0.7.5
-Pillow==7.1.0
 plotly==4.4.1
 pluggy==0.13.1
 ply==3.11
@@ -97,18 +81,14 @@ pyasn1==0.4.8
 pyasn1-modules==0.2.8
 pycountry==20.7.3
 pycparser==2.20
-Pygments==2.6.1
 pymongo==3.11.0
-pyparsing==2.4.7
 pyrsistent==0.17.3
 PySocks==1.7.1
 pytest==6.1.2
-python-dateutil==2.8.1
-pytz==2019.3
 PyYAML
 qtconsole==4.7.7
 QtPy==1.9.0
-requests==2.23.0
+requests
 requests-oauthlib==1.3.0
 retrying==1.3.3
 rsa==4.7.1
@@ -119,14 +99,13 @@ Send2Trash==1.5.0
 simplegeneric==0.8.1
 six==1.15.0
 soupsieve==2.0.1
+tornado
 tempora==4.0.1
 terminado==0.9.1
 testpath==0.4.4
 toml==0.10.1
 tornado==5.1.1
-traitlets==4.3.3
 tweepy==3.6.0
-typing-extensions==3.7.4.3
 ujson==4.0.1
 urllib3==1.24.3
 wcwidth==0.2.5
