--- a/Python/requirementsColab.txt
+++ b/Python/requirementsColab.txt
@@ -1,117 +1,8 @@
-aiohttp==3.7.3
-apiclient==1.0.4
-argon2-cffi==20.1.0
-async-timeout==3.0.1
-atomicwrites==1.4.0
-backcall==0.2.0
-beautifulsoup4==4.6.3
-bleach==3.2.1
-Brotli==1.0.9
-certifi==2020.6.20
-chardet==3.0.4
-cheroot==8.5.2
-CherryPy==18.6.0
-click
-colorama==0.4.3
-curlify==2.2.1
 cssselect
-cycler==0.10.0
-dash==1.17.0
-dash-core-components==1.13.0
-dash-html-components==1.1.1
-dash-renderer==1.8.3
-dash-table==4.11.0
-decorator==4.4.2
-defusedxml==0.6.0
-entrypoints==0.3
 eurostat==0.2.1
 facebook-business==9.0.3
-Flask==1.1.2
-Flask-Compress==1.7.0
-future==0.16.0
-google==3.0.0
-google-auth==1.21.1
 httplib2==0.19.0
-idna==2.10
-idna-ssl==1.1.0
-iniconfig==1.1.1
-ipykernel
-ipython
-ipython-genutils
-ipywidgets
-itsdangerous==1.1.0
-jaraco.classes==3.2.1
-jaraco.collections==3.2.0
-jaraco.functools==3.2.1
-jaraco.text==3.5.0
-jedi==0.17.2
-Jinja2
-jsonpath-rw==1.4.0
-jsonschema
-jupyter
-jupytext==1.6.0
-kiwisolver==1.2.0
 lxml
-MarkupSafe==1.1.1
-matplotlib==3.7.3
-mistune==0.8.4
-more-itertools==8.7.0
-multidict==5.1.0
-nbconvert
-nbformat
-numpy
-oauth2client==4.1.3
-oauthlib==3.1.0
-pandas>=2.2.0
-pandaSDMX==0.9
-pandocfilters==1.4.2
-parso==0.7.1
-pexpect==4.8.0
-pickleshare==0.7.5
-plotly==4.4.1
-pluggy==0.13.1
-ply==3.11
-portend==2.7.1
-prometheus-client==0.8.0
-prompt-toolkit==1.0.18
-ptyprocess==0.6.0
-py==1.9.0
-pyasn1==0.4.8
-pyasn1-modules==0.2.8
-pycountry==20.7.3
-pycparser==2.20
-pymongo==3.11.0
-pyrsistent==0.17.3
-PySocks==1.7.1
-pytest==6.1.2
-PyYAML
-qtconsole==4.7.7
-QtPy==1.9.0
+plotly
 requests
-requests-oauthlib==1.3.0
-retrying==1.3.3
-rsa==4.7.1
 scipy
-seaborn==0.11.0
-selenium==3.141.0
-Send2Trash==1.5.0
-simplegeneric==0.8.1
-six==1.15.0
-soupsieve==2.0.1
-tornado
-terminado==0.9.1
-testpath==0.4.4
-toml==0.10.1
-tornado==5.1.1
-tweepy==3.6.0
-ujson==4.0.1
-urllib3==1.24.3
-wcwidth==0.2.5
-webencodings==0.5.1
-Werkzeug==1.0.1
-widgetsnbextension==3.5.1
-wincertstore==0.2
-world-bank-data==0.1.3
-yarl==1.6.3
-zc.lockfile==2.0
-zipp==3.3.1
